--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
 name: Run Azure Login with OIDC
-on: [push]
+on:
+  workflow_dispatch:
 
 permissions:
   id-token: write
   contents: read
 jobs:
-  build-and-deploy:
+  build-and-deploy-afw:
     runs-on: ubuntu-latest
     steps:
       - name: Azure login
@@ -21,3 +22,21 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az account show
+    
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.10.2
+          
+      - name: Deploy via Terraform
+        env:
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        run: |
+          terraform init
+          terraform plan
+          terraform apply -auto-approve
