--- a/.github/workflows/createfw.yml
+++ b/.github/workflows/createfw.yml
@@ -7,6 +7,7 @@ permissions:
   contents: read
 jobs:
   build-and-deploy-afw:
+    environment: dev
     runs-on: ubuntu-latest
     steps:
       - name: Azure login
