--- a/.github/workflows/deletefw.yml
+++ b/.github/workflows/deletefw.yml
@@ -6,7 +6,7 @@ permissions:
   id-token: write
   contents: read
 jobs:
-  build-and-deploy-afw:
+  destroy-afw:
     environment: dev
     runs-on: ubuntu-latest
     steps:
