--- a/.github/workflows/shmodifyrules.yml
+++ b/.github/workflows/shmodifyrules.yml
@@ -1,10 +1,8 @@
-name: Update Azure Firewall rules with Terraform
-# on:
-#   pull_request:
-#     branches:
-#       - main
+name: SH update Azure Firewall rules with Terraform
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 permissions:
   id-token: write
@@ -12,7 +10,7 @@ permissions:
 jobs:
   update-fw-rules:
     environment: dev
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Azure login
         uses: azure/login@v2
