disable terraform wrapper for nodejs compatibility

--- a/.github/workflows/shmodifyrules.yml
+++ b/.github/workflows/shmodifyrules.yml
@@ -33,6 +33,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.10.2
+          terraform_wrapper: false
 
       - name: Terraform init
         env:
