--- a/.github/workflows/shmodifyrules.yml
+++ b/.github/workflows/shmodifyrules.yml
@@ -1,8 +1,10 @@
 name: SH update Azure Firewall rules with Terraform
+# on:
+#   pull_request:
+#     branches:
+#       - main
 on:
-  pull_request:
-    branches:
-      - main
+    workflow_dispatch:
 
 permissions:
   id-token: write
